# Automatic-Wheel-Assembly-Detection

./: .gitignore  .lr_find_51141f54-728d-409c-98a0-27fb14e5e191.ckpt  .lr_find_5c948882-bf45-45a3-b58d-65629c9a9eee.ckpt  .lr_find_76ab0488-bf53-41dd-920a-e221aaab6c48.ckpt  .lr_find_ae90347e-b9f0-4a5c-a423-4112e7758fa7.ckpt  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  environment.yml  environment_cuda.yml  index.html  predict.dockerfile  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
commands/: index.html
data/: FT_dataset_labels.csv  README.md  raw.dvc
docker/: index.html
dockerfiles/: Dockerfile  README.md  cloudbuild.dockerfile  conda.dockerfile  conda_setup.dockerfile  conda_wheel_assembly_detection.dockerfile  deploy_model.dockerfile  setup.dockerfile  train_model vm_test.dockerfile  train_model.dockerfile  train_model_vm.dockerfile  train_wheel_assemby_detection.dockerfile
docs/: README.md  mkdocs.yaml
gcp_cloud_function/: cloud_functions.py
improvements/: index.html
models/: model_20240113-213114.pth  model_20240113-222322.pth  model_20240115-105445.pth  model_20240115-112448.pth  model_20240115-113246.pth  model_20240115-113943.pth  model_20240115-114631.pth  model_20240115-115313.pth  model_20240115-115946.pth  model_20240115-120538.pth  model_20240115-124359.pth  model_20240115-162555.pth  model_20240115-163632.pth  model_20240115-164226.pth  model_20240115-205255.pth  model_20240116-121239.pth  model_20240116-123717.pth  model_20240116-143049.pth
reports/: README.md  (+1 more)
(+79 files in other folders)
