[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "Automatic wheel assembly detection without the need for operator intervention. Using data from torque and force sensor and training a model using LTSM RNN, we will be able to atuomatically detect whether the wheel was correctly assembled."
authors = [
  { name = "DTU", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120